--- a/src/nav.html
+++ b/src/nav.html
@@ -1,5 +1,5 @@
 <nav class="d-flex">
-    <a href="tout-les-anime.php">Tout les animés vu</a>
+    <a href="tout-les-animes.php">Tout les animés vu</a>
     <a href=".php">Par catégorie</a>
     <a href=".php">Animés a voir</a>
     <a href=".php">Film d'animation</a>
