--- a/src/nav.html
+++ b/src/nav.html
@@ -1,6 +1,6 @@
 <nav class="d-flex">
     <a href="tout-les-animes.php">Tout les animés vu</a>
-    <a href=".php">Par catégorie</a>
+    <a href="animes-by-cat.php">Par catégorie</a>
     <a href=".php">Animés a voir</a>
     <a href=".php">Film d'animation</a>
     <a href=".php">Animés en pause</a>
