--- a/src/nav.html
+++ b/src/nav.html
@@ -1,4 +1,5 @@
 <nav class="d-flex">
+    <a href="../list-anime">Acceuil</a>
     <a href="tout-les-animes.php">Tout les animés vu</a>
     <a href="animes-by-cat.php">Par catégorie</a>
     <a href=".php">Animés a voir</a>
