--- a/src/nav.html
+++ b/src/nav.html
@@ -5,4 +5,8 @@
     <a href=".php">Animés a voir</a>
     <a href=".php">Film d'animation</a>
     <a href=".php">Animés en pause</a>
+    <form class="d-flex" action="animes-by-cat.php" method="POST">
+        <input type="text" name="select">
+        <input type="submit" value="rechercher">
+    </form>
 </nav>
