--- a/src/nav.html
+++ b/src/nav.html
@@ -1,12 +1,11 @@
 <nav class="d-flex">
     <a href="../list-anime">Acceuil</a>
     <a href="tout-les-animes.php">Tout les animés vu</a>
-    <a href="animes-by-cat.php">Par catégorie</a>
-    <a href=".php">Animés a voir</a>
+    <a href="animes-a-voir.php">Animés a voir</a>
     <a href=".php">Film d'animation</a>
     <a href=".php">Animés en pause</a>
     <form class="d-flex" action="animes-by-cat.php" method="POST">
-        <input type="text" name="select">
+        <input type="text" name="select" placeholder="Par tags">
         <input type="submit" value="rechercher">
     </form>
 </nav>
