--- a/src/nav.html
+++ b/src/nav.html
@@ -4,8 +4,8 @@
     <a href="animes-a-voir.php">Animés a voir</a>
     <a href="film-animation.php">Film d'animation</a>
     <a href=".php">Animés en pause</a>
-    <form class="d-flex" action="animes-by-cat.php" method="POST">
-        <input type="text" name="select" placeholder="Par tags">
+    <form class="d-flex" action="animes-browser.php" method="POST">
+        <input type="text" name="select">
         <input type="submit" value="rechercher">
     </form>
 </nav>
