add page for paused animes

--- a/src/nav.html
+++ b/src/nav.html
@@ -3,7 +3,7 @@
     <a href="tout-les-animes.php">Tout les animés vu</a>
     <a href="animes-a-voir.php">Animés a voir</a>
     <a href="film-animation.php">Film d'animation</a>
-    <a href=".php">Animés en pause</a>
+    <a href="animes-en-pause.php">Animés en pause</a>
     <form class="d-flex" action="animes-browser.php" method="POST">
         <input type="text" name="select">
         <input type="submit" value="rechercher">
